--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TIDJARA AMMA- Mode</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
   <!-- Barre de navigation -->
@@ -32,44 +34,111 @@
     <h2>Explorer par Catégorie</h2>
     <div class="grid">
       <div class="card">
-        <img src="WhatsApp Image 2025-07-22 à 10.05.14_0cbc8e6d.jpg" alt="Mode femme" />
-        <p> femme et homme</p>
+
+        <a href="WhatsApp Image 2025-07-22 à 10.05.14_0cbc8e6d.jpg" target="_blank">
+          <img src="WhatsApp Image 2025-07-22 à 10.05.14_0cbc8e6d.jpg" alt="Mode femme" style="width: 150px;" />
+        </a>
+        <p>femme et homme</p>
+         <a href="5.jpg">
+          <img src="5.jpg" alt="Sneakers" style="width: 150px;" />
+        </a>
+        <p>huile</p>
       </div>
       <div class="card">
-        <img src="WhatsApp Image 2025-07-22 à 10.05.13_c2904af8.jpg" alt="Mode homme" />
+        <a href="WhatsApp Image 2025-07-22 à 10.05.14_0cbc8e6d.jpg" target="_blank">
+          <img src="WhatsApp Image 2025-07-22 à 10.05.14_0cbc8e6d.jpg" alt="Mode homme" style="width: 150px;" />
+        </a>
         <p>mode enfant</p>
+         <a href="4.jpg">
+          <img src="4.jpg" alt="Sneakers" style="width: 150px;" />
+        </a>
+        <p>Achab</p>
       </div>
       <div class="card">
-        <img src="WhatsApp Image 2025-07-22 à 10.05.14_6e171898.jpg" alt="Mode enfant" />
+        <a href="WhatsApp Image 2025-07-22 à 10.05.14_6e171898.jpg" target="_blank">
+          <img src="WhatsApp Image 2025-07-22 à 10.05.14_6e171898.jpg" alt="Mode enfant" style="width: 150px;" />
+        </a>
         <p>Mode enfant</p>
+        <a href="3.jpg">
+          <img src="3.jpg" alt="Sneakers" style="width: 150px;" />
+        </a>
+       <p>huille naturelle</p> 
       </div>
+      
       <div class="card">
-        <img src="CHDAR.jpg" alt="Mode bébé" />
+        <a href="CHDAR.jpg">
+          <img src="CHDAR.jpg" alt="Mode bébé" style="width: 150px;" />
+        </a>
         <p>ACHB</p>
+         <a href="2.jpg">
+          <img src="2.jpg" alt="Sneakers" style="width: 150px;" />
+        </a>
+        <p>huille</p>
       </div>
       <div class="card">
-        <img src="CH.jpg" alt="Sacs pour femme" />
+
+        <a href="CH.jpg">
+          <img src="CH.jpg" alt="Sacs pour femme" style="width: 150px;" />
+        </a>
         <p>ACHAB</p>
+         <a href="12.jpg">
+          <img src="12.jpg" alt="Sneakers" style="width: 150px;" />
+        </a>
+        <p>huille</p>
       </div>
       <div class="card">
-        <img src="CILS.jpg" alt="Sneakers" />
+        <a href="CILS.jpg">
+          <img src="CILS.jpg" alt="Sneakers" style="width: 150px;" />
+        </a>
         <p>CILS</p>
+        <a href="10.jpg">
+          <img src="10.jpg" alt="femme homme" style="width: 150px;" />
+        </a>
+        <p>pour tout genre</p>
       </div>
       <div class="card">
-        <img src="KAF.jpg" alt="Chaussures" />
+        <a href="KAF.jpg">
+          <img src="KAF.jpg" alt="Chaussures" style="width: 150px;" />
+        </a>
         <p>ACHAB</p>
+        <a href="11.jpg">
+          <img src="11.jpg" alt="huile de cheveux" style="width: 150px;" />
+        </a>
+        <p>huile de cheveux</p>
+      </div>
+      
+        <div class="card">
+          <a href="CHH.jpg">
+          <img src="CHH.jpg" alt="Bijoux" style="width: 150px;" />
+      </a>
+      <p>ACHAB</p>
+      <a href="1.jpg" target="_blank">
+          <img src="1.jpg" alt="Mode femme" style="width: 150px;" />
+        </a>
+        <p>femme et homme</p>
       </div>
       <div class="card">
-        <img src="CHH.jpg" alt="Bijoux" />
-        <p>ACHAB</p>
-      </div>
+    </div>
     </div>
   </section>
 
   <!-- Pied de page -->
-  <footer class="footer">
-    <p>© 2025 ceci toujours chez  تجـــارة عــــامة 🛍  TIDJARa amma est toujours la meilleur </p>
-  </footer>
-
+   <section id="contact" style="padding: 40px; background-color: #f9f9f9; text-align: center;">
+  <h2>📩 Contactez-nous</h2>
+  <p>Vous êtes intéressé par un produit ? Envoyez-nous un message !</p>
+  
+  <form action="https://formspree.io/f/XXXXXXXX" method="POST" style="max-width: 500px; margin: auto;">
+    <input type="text" name="name" placeholder="Votre nom" required style="width: 100%; padding: 10px; margin: 10px 0;"><br>
+    <input type="email" name="email" placeholder="Votre adresse e-mail" required style="width: 100%; padding: 10px; margin: 10px 0;"><br>
+    <textarea name="message" placeholder="Votre message" rows="5" required style="width: 100%; padding: 10px; margin: 10px 0;"></textarea><br>
+    <button type="submit" style="padding: 10px 20px; background-color: #d1005b; color: white; border: none; cursor: pointer;">Envoyer</button>
+  </form>
+</section>
+   <footer style="background-color: #111; color: white; text-align: center; padding: 15px;">
+  <p>© 2025 ceci toujours chez تجارة عامة TIDJARA amma est toujours la meilleur</p>
+  <p>📧 Contact : <a href="mailto:Souhailamahamat235@icloud.com" style="color: #00aced;">Souhailamahamat235@icloud.com</a></p>
+</footer>
+  
 </body>
+
 </html>
